# dlroms

./: README.md  dnns.py  fespaces.py  setup.cfg  setup.py
Reduced order modeling via Deep Learning/: Deep Learning based ROMs.ipynb
src/dlroms/: __init__.py  colab.py  cores.py  dnns.py  fespaces.py  geometry.py  gifs.py  gp.py  minns.py  pdes.py  pushforward.py  roms.py
src/dlroms/testcases/: __init__.py  cookies.py  cylinder.py  hail.py  heatblocks.py  problems.py  rod.py
